--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,13 @@
 [submodule "src/third-party/singleapplication"]
-	path = src/third-party/singleapplication
+	path = src/3rdparty/singleapplication
 	url = https://github.com/itay-grudev/SingleApplication.git
 	ignore = dirty
 [submodule "src/third-party/qtaskbarcontrol"]
-	path = src/third-party/qtaskbarcontrol
+	path = src/3rdparty/qtaskbarcontrol
 	url = https://github.com/crow-translate/QTaskbarControl.git
 	ignore = dirty
-[submodule "src/qonlinetranslator"]
-	path = src/qonlinetranslator
-	url = https://github.com/crow-translate/QOnlineTranslator.git
-	ignore = dirty
-[submodule "src/qgittag"]
-	path = src/qgittag
-	url = https://github.com/crow-translate/QGitTag.git
-	ignore = dirty
 [submodule "src/third-party/qhotkey"]
-	path = src/third-party/qhotkey
+	path = src/3rdparty/qhotkey
 	url = https://github.com/Skycoder42/QHotkey.git
 	ignore = dirty
 [submodule "data/third-party/circle-flags"]
