--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,6 +2,9 @@ Dependencies:
 - 'on': ['@all']
   'require':
     'frameworks/extra-cmake-modules': '@stable'
+
+- 'on': ['Linux', 'FreeBSD']
+  'require':
     'plasma/kwayland': '@stable'
 
 Options:
