--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,3 +6,6 @@ include:
       - /gitlab-templates/linux.yml
       - /gitlab-templates/freebsd.yml
       - /gitlab-templates/flatpak.yml
+      - /gitlab-templates/craft-windows-x86-64.yml
+      - /gitlab-templates/craft-macos-x86-64.yml
+      - /gitlab-templates/craft-appimage.yml
