Add clang format job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,6 @@ variables:
 include:
   - project: sysadmin/ci-utilities
     file:
+      - /gitlab-templates/clang-format.yml
       - /gitlab-templates/linux.yml
       - /gitlab-templates/freebsd.yml
