--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -12,6 +12,7 @@ Dependencies:
 
 Options:
   cmake-options: '-D WITH_PORTABLE_MODE=ON'
+  cppcheck-ignore-files: ['src/3rdparty']
   run-tests: False
   setup-x-environment: False
   setup-dbus-session: False
