--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -11,8 +11,8 @@ Dependencies:
     'plasma/kwayland': '@stable'
 
 Options:
-  cmake-options: '-D WITH_PORTABLE_MODE=ON'
-  cppcheck-arguments: '--enable=warning,style,performance,--suppress=shadowVariable'
+  cmake-options: '-D WITH_PORTABLE_MODE=ON -D CMAKE_COMPILE_WARNING_AS_ERROR=ON'
+  cppcheck-arguments: '--enable=warning,style,performance --suppress=shadowVariable --error-exitcode=10'
   cppcheck-ignore-files: ['src/3rdparty']
   run-tests: False
   setup-x-environment: False
