--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,3 +10,4 @@ include:
       - /gitlab-templates/clang-format.yml
       - /gitlab-templates/linux.yml
       - /gitlab-templates/freebsd.yml
+      - /gitlab-templates/flatpak.yml
