Switch to Breeze icons

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 	path = data/icons/3rdparty/circle-flags
 	url = https://github.com/HatScripts/circle-flags.git
 	ignore = dirty
-[submodule "data/third-party/fluent-icon-theme"]
-	path = data/icons/3rdparty/fluent-icon-theme
-	url = https://github.com/vinceliuice/Fluent-icon-theme.git
+[submodule "data/icons/3rdparty/breeze-icons"]
+	path = data/icons/3rdparty/breeze-icons
+	url = https://invent.kde.org/frameworks/breeze-icons.git
 	ignore = dirty
