--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -13,7 +13,7 @@ Dependencies:
 Options:
   cmake-options: '-D WITH_PORTABLE_MODE=ON -D CMAKE_COMPILE_WARNING_AS_ERROR=ON'
   cppcheck-arguments: '--enable=warning,style,performance --suppress=shadowFunction'
-  cppcheck-ignore-files: ['src/3rdparty']
+  cppcheck-ignore-files: ['src/3rdparty', 'data/icons/3rdparty']
   run-tests: False
   setup-x-environment: False
   setup-dbus-session: False
