--- a/.flatpak-manifest.yaml
+++ b/.flatpak-manifest.yaml
@@ -34,12 +34,8 @@ modules:
   - name: crow-translate
     buildsystem: cmake-ninja
     sources:
-      - type: git
-        url: https://github.com/crow-translate/crow-translate.git
-        tag: 2.11.1
-        commit: 7113ff01a994584ed0a3ec557fc3a694fcb06b63
-        x-checker-data:
-          type: git
+      - type: dir
+        path: .
     modules:
       - name: tesseract
         buildsystem: cmake-ninja
