Update all branding and links

--- a/.flatpak-manifest.yaml
+++ b/.flatpak-manifest.yaml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: none
 # SPDX-License-Identifier: CC0-1.0
 
-id: io.crow_translate.CrowTranslate
+id: org.kde.CrowTranslate
 branch: master
 sdk: org.kde.Sdk
 runtime: org.kde.Platform
