--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,3 +12,4 @@ include:
       - /gitlab-templates/freebsd.yml
       - /gitlab-templates/windows.yml
       - /gitlab-templates/flatpak.yml
+      - /gitlab-templates/craft-appimage.yml
