--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,5 @@ include:
       - /gitlab-templates/clang-format.yml
       - /gitlab-templates/linux.yml
       - /gitlab-templates/freebsd.yml
+      - /gitlab-templates/windows.yml
       - /gitlab-templates/flatpak.yml
