Rewrite API to use Mozhi
We switched to use [Mozhi](https://codeberg.org/aryak/mozhi). It will significantly improve privacy and extend engines support.

--- a/data/org.kde.CrowTranslate.desktop.in
+++ b/data/org.kde.CrowTranslate.desktop.in
@@ -14,14 +14,14 @@ GenericName[nl]=Vertaler
 GenericName[tr]=Çevirmen
 GenericName[uk]=Перекладач
 GenericName[x-test]=xxTranslatorxx
-Comment=A simple and lightweight translator that allows to translate and speak the selected text
+Comment=A simple and lightweight translator that allows to translate and speak the selected text using Mozhi
 Comment[ca]=Un traductor senzill i lleuger que permet traduir i pronunciar el text seleccionat
 Comment[ca@valencia]=Un traductor senzill i lleuger que permet traduir i llegir el text seleccionat
 Comment[nl]=Een eenvoudige en lichtgewicht vertaler die het vertalen en spreken van de geselecteerde tekst biedt
 Comment[tr]=Metinleri çevirmenize ve seslendirmenize olanak tanıyan basit ve hafif bir çeviri yazılımı.
 Comment[uk]=Проста і невибаглива до ресурсів програма для перекладу, яка дає вам змогу перекладати і озвучувати позначені фрагменти тексту
 Comment[x-test]=xxA simple and lightweight translator that allows to translate and speak the selected textxx
-Keywords=google;yandex;text-to-speech;
+Keywords=google;yandex;deepl;duckduckgo;libre';mymemory;reverso;text-to-speech;
 Keywords[ca]=google;yandex;text-to-speech;
 Keywords[ca@valencia]=google;yandex;text-to-speech;
 Keywords[nl]=google;yandex;tekst-naar-spraak;
