--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ add_executable(${PROJECT_NAME}
     src/ocr/screengrabbers/abstractscreengrabber.cpp
     src/ocr/screengrabbers/genericscreengrabber.cpp
     src/ocr/snippingarea.cpp
-    src/onlinetranslator/onlinetranslator.cpp
+    src/onlinetranslator.cpp
     src/popupwindow.cpp
     src/popupwindow.ui
     src/screenwatcher.cpp
