--- a/src/cmake.h.in
+++ b/src/cmake.h.in
@@ -15,5 +15,6 @@
 #define APPLICATION_NAME "@APPLICATION_NAME@"
 #define APPLICATION_ID "@APPLICATION_ID@"
 #define DESKTOP_FILE "@DESKTOP_FILE@"
+#define LOCALES { @LOCALES@ }
 
 #endif // CMAKE_H
