--- a/data/org.kde.CrowTranslate.desktop.in
+++ b/data/org.kde.CrowTranslate.desktop.in
@@ -44,7 +44,7 @@ Keywords[tr]=google;yandex;deepl;duckduckgo;libre';mymemory;reverso;text-to-spee
 Keywords[uk]=google;yandex;deepl;duckduckgo;libre';mymemory;reverso;text-to-speech;гугл;яндекс;діпл;дакдакгоу;лібре;маймеморі;реверсо;озвучення;
 Keywords[x-test]=xxgooglexx;xxyandexxx;xxdeeplxx;xxduckduckgoxx;xxlibre'xx;xxmymemoryxx;xxreversoxx;xxtext-to-speechxx;
 Exec=crow
-Icon=crow-translate
+Icon=@APPLICATION_ID@
 Terminal=false
 StartupNotify=false
 Type=Application
