Fix missing translations

--- a/.flatpak-manifest.yaml
+++ b/.flatpak-manifest.yaml
@@ -19,6 +19,7 @@ finish-args:
   - --talk-name=org.kde.StatusNotifierWatcher
 copy-icon: true
 command: crow
+separate-locales: false
 cleanup:
   - '*.a'
   - '*.la'
