--- a/.flatpak-manifest.yaml
+++ b/.flatpak-manifest.yaml
@@ -6,10 +6,16 @@ branch: master
 sdk: org.kde.Sdk
 runtime: org.kde.Platform
 runtime-version: 5.15-23.08
-tags: ['nightly']
-desktop-file-name-suffix: " (Nightly)"
+add-extensions:
+  org.kde.CrowTranslate.tessdata:
+    directory: share/tessdata
+    version: stable
+    versions: stable;beta;test
+    no-autodownload: true
+    autodelete: true
 finish-args:
   - --device=dri
+  - --env=TESSDATA_PREFIX=/app/share
   - --share=ipc
   - --share=network
   - --socket=fallback-x11
@@ -63,3 +69,19 @@ modules:
                   project-id: 1549
                   url-template: https://github.com/DanBloomberg/leptonica/releases/download/$version/leptonica-$version.tar.gz
 
+      # The `tessdata_fast` variant is recommended for end users: https://tesseract-ocr.github.io/tessdoc/Data-Files
+      - name: tessdata_fast
+        buildsystem: simple
+        build-commands:
+          - rm -rf ${FLATPAK_DEST}/share/tessdata
+          - mkdir -p ${FLATPAK_DEST}/share/tessdata
+          - cp -av * ${FLATPAK_DEST}/share/tessdata/
+        sources:
+          - type: git
+            url: https://github.com/tesseract-ocr/tessdata_fast
+            tag: 4.1.0
+            commit: 65727574dfcd264acbb0c3e07860e4e9e9b22185
+            x-checker-data:
+              type: anitya
+              project-id: 326567
+              tag-template: $version
