--- a/.flatpak-manifest.yaml
+++ b/.flatpak-manifest.yaml
@@ -6,6 +6,8 @@ branch: master
 sdk: org.kde.Sdk
 runtime: org.kde.Platform
 runtime-version: 5.15-23.08
+tags: ["nightly"]
+desktop-file-name-suffix: " (Nightly)"
 add-extensions:
   org.kde.CrowTranslate.tessdata:
     directory: share/tessdata
