--- a/data/org.kde.CrowTranslate.desktop.in
+++ b/data/org.kde.CrowTranslate.desktop.in
@@ -100,7 +100,7 @@ StartupNotify=false
 Type=Application
 Categories=Office;Translation;Qt;
 StartupWMClass=crow
-X-KDE-DBUS-Restricted-Interfaces=org.kde.kwin.Screenshot
+X-KDE-DBUS-Restricted-Interfaces=org.kde.kwin.Screenshot,org.kde.KWin.ScreenShot2
 X-Purism-FormFactor=Workstation;Mobile;
 
 [Desktop Action TranslateSelectedText]
