--- a/.flatpak-manifest.yaml
+++ b/.flatpak-manifest.yaml
@@ -5,7 +5,7 @@ id: org.kde.CrowTranslate
 branch: master
 sdk: org.kde.Sdk
 runtime: org.kde.Platform
-runtime-version: 5.15-24.08
+runtime-version: "6.9"
 tags: ["nightly"]
 desktop-file-name-suffix: " (Nightly)"
 add-extensions:
