Add ECM clang-format target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,15 @@ if(CMAKE_EXPORT_COMPILE_COMMANDS AND DEFINED ENV{NIX_CFLAGS_COMPILE})
   set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
 
-find_package(ECM 5.83 REQUIRED NO_MODULE)
+find_package(ECM 6.4.0 REQUIRED CONFIG)
 list(APPEND CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+include(KDEClangFormat)
+file(GLOB_RECURSE CLANG_FORMAT_SOURCES src/*.cpp src/*.h)
+list(FILTER CLANG_FORMAT_SOURCES EXCLUDE REGEX ".*/src/3rdparty/.*" )
+list(FILTER CLANG_FORMAT_SOURCES EXCLUDE REGEX ".*${PROJECT_NAME}_autogen.*" )
+kde_clang_format(${CLANG_FORMAT_SOURCES})
+
 set(QAPPLICATION_CLASS QApplication)
 option(QHOTKEY_INSTALL OFF)
 set(BUILD_SHARED_LIBS OFF)
@@ -254,13 +261,8 @@ ecm_install_po_files_as_qm(poqm)
 if(UNIX AND NOT APPLE)
     # -DQT_BIN_DIR=/path/to/qt/executables can be passed to CMake directly
     if(NOT DEFINED QT_BIN_DIR)
-        if(ECM_VERSION VERSION_LESS 5.93)
-            include(ECMQueryQmake)
-            query_qmake(QT_BIN_DIR QT_INSTALL_BINS)
-        else()
-            include(ECMQueryQt)
-            ecm_query_qt(QT_BIN_DIR QT_INSTALL_BINS)
-        endif()
+      include(ECMQueryQt)
+      ecm_query_qt(QT_BIN_DIR QT_INSTALL_BINS)
     endif()
 
     configure_file(data/${DESKTOP_FILE}.in ${CMAKE_CURRENT_BINARY_DIR}/data/${DESKTOP_FILE} @ONLY)
