Add provider abstraction system for translation and TTS
- Add Language class to replace OnlineTranslator::Language throughout codebase
  - Implement ATranslationProvider and ATTSProvider abstract base classes
  - Add concrete providers: Copy/Mozhi translation, NoOp/Mozhi/Qt/Piper TTS
  - Add ProviderOptions and ProviderOptionsManager for
    configuration (this keeps all the implementation details out of MainWindow)
  - Refactor CLI to use provider system instead of direct OnlineTranslator
  - Update MainWindow and PopupWindow to use provider abstraction
  - Add Qt TextToSpeech dependency to CMakeLists.txt (for QVoice/Voice)
  - Add espeak-ng and onnxruntime dependencies for Piper
  - Add Voice class for TTS voice representation
  - Modify settings dialog and app settings to support provider selection

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 	path = data/icons/3rdparty/breeze-icons
 	url = https://invent.kde.org/frameworks/breeze-icons.git
 	ignore = dirty
+[submodule "src/3rdparty/espeak-ng"]
+	path = src/3rdparty/espeak-ng
+	url = https://github.com/espeak-ng/espeak-ng.git
