--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 #
 # SPDX-FileCopyrightText: 2018 Hennadii Chernyshchyk <genaloner@gmail.com>
 # SPDX-FileCopyrightText: 2022 Volk Milit <javirrdar@gmail.com>
-#
+# SPDX-FileCopyrightText: 2022 Mauritius Clemens <gitlab@janitor.chat>
 # SPDX-License-Identifier: GPL-3.0-or-later
 #
 
 cmake_minimum_required(VERSION 3.16.0)
 
 project(crow-translate
-    VERSION 3.1.0
+    VERSION 4.0.0
     DESCRIPTION "Application that allows to translate and speak text using Mozhi"
     HOMEPAGE_URL https://apps.kde.org/crow-translate
     LANGUAGES CXX
@@ -32,7 +32,7 @@ set(CPACK_PROJECT_CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CPackProjectConf
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
 set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS_POLICY >=)
-set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "qtgstreamer-plugins-qt5, gstreamer1.0-plugins-good, gstreamer1.0-alsa, gstreamer1.0-pulseaudio, libqt5multimedia5-plugins")
+set(CPACK_DEBIAN_PACKAGE_RECOMMENDS "libonnxruntime-dev" "libsonic-dev" "libfmt-dev" "libspdlog-dev")
 set(CPACK_RPM_FILE_NAME RPM-DEFAULT)
 set(CPACK_RPM_PACKAGE_LICENSE GPLv3)
 set(CPACK_RPM_PACKAGE_GROUP Applications/Text)
@@ -70,6 +70,9 @@ else()
 endif()
 option(WITH_KWAYLAND "Use KWayland for better Wayland integration" ON)
 
+option(WITH_PIPER_TTS "Enable Piper neural TTS provider (requires onnxruntime and espeak-ng)" ON)
+
+
 if(CMAKE_EXPORT_COMPILE_COMMANDS AND DEFINED ENV{NIX_CFLAGS_COMPILE})
   set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
 endif()
@@ -82,13 +85,14 @@ file(GLOB_RECURSE CLANG_FORMAT_SOURCES src/*.cpp src/*.h)
 list(FILTER CLANG_FORMAT_SOURCES EXCLUDE REGEX ".*/src/3rdparty/.*" )
 list(FILTER CLANG_FORMAT_SOURCES EXCLUDE REGEX ".*${PROJECT_NAME}_autogen.*" )
 kde_clang_format(${CLANG_FORMAT_SOURCES})
-
 set(QAPPLICATION_CLASS QApplication)
 option(QHOTKEY_INSTALL OFF)
 set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(src/3rdparty/singleapplication)
 add_subdirectory(src/3rdparty/qhotkey)
-find_package(Qt6 REQUIRED COMPONENTS Widgets Multimedia Network LinguistTools Concurrent StateMachine)
+
+find_package(Qt6 REQUIRED COMPONENTS Widgets Multimedia Network LinguistTools Concurrent StateMachine TextToSpeech)
+
 find_package(Tesseract REQUIRED)
 if(UNIX)
     find_package(Qt6 REQUIRED COMPONENTS DBus)
@@ -142,54 +146,88 @@ configure_file(src/cmake.h.in cmake.h)
 add_executable(${PROJECT_NAME}
     data/icons/icon-theme.qrc
     data/icons/engines/engines.qrc
+    src/languagesdialog.h
     src/languagesdialog.cpp
     src/languagesdialog.ui
     src/cli.h
     src/cli.cpp
+    src/contextmenu.h
     src/contextmenu.cpp
     src/instancepinger.h
     src/instancepinger.cpp
+    src/instancepingerdialog.h
     src/instancepingerdialog.cpp
+    src/languagebuttonswidget.h
     src/languagebuttonswidget.cpp
     src/languagebuttonswidget.ui
     src/main.cpp
+    src/mainwindow.h
     src/mainwindow.cpp
     src/mainwindow.ui
+    src/ocr/ocr.h
     src/ocr/ocr.cpp
+    src/ocr/screengrabbers/abstractscreengrabber.h
     src/ocr/screengrabbers/abstractscreengrabber.cpp
+    src/ocr/screengrabbers/genericscreengrabber.h
     src/ocr/screengrabbers/genericscreengrabber.cpp
+    src/ocr/snippingarea.h
     src/ocr/snippingarea.cpp
+    src/onlinetranslator.h
     src/onlinetranslator.cpp
+    src/popupwindow.h
     src/popupwindow.cpp
     src/popupwindow.ui
+    src/screenwatcher.h
     src/screenwatcher.cpp
+    src/selection.h
     src/selection.cpp
+    src/settings/appsettings.h
     src/settings/appsettings.cpp
+    src/settings/ocrlanguageslistwidget.h
     src/settings/ocrlanguageslistwidget.cpp
+    src/settings/settingsdialog.h
     src/settings/settingsdialog.cpp
     src/settings/settingsdialog.ui
+    src/settings/shortcutsmodel/shortcutitem.h
     src/settings/shortcutsmodel/shortcutitem.cpp
+    src/settings/shortcutsmodel/shortcutsmodel.h
     src/settings/shortcutsmodel/shortcutsmodel.cpp
+    src/settings/shortcutsmodel/shortcutsview.h
     src/settings/shortcutsmodel/shortcutsview.cpp
+    src/settings/tesseractparameterstablewidget.h
     src/settings/tesseractparameterstablewidget.cpp
+    src/settings/autostartmanager/abstractautostartmanager.h
     src/settings/autostartmanager/abstractautostartmanager.cpp
+    src/sourcetextedit.h
     src/sourcetextedit.cpp
-    src/speakbuttons.h
-    src/speakbuttons.cpp
-    src/speakbuttons.ui
-    src/transitions/languagedetectedtransition.cpp
-    src/transitions/ocruninitializedtransition.cpp
-    src/transitions/playerstoppedtransition.h
-    src/transitions/playerstoppedtransition.cpp
-    src/transitions/retranslationtransition.cpp
-    src/transitions/snippingvisibletransition.cpp
-    src/transitions/textemptytransition.cpp
-    src/transitions/translatorabortedtransition.cpp
-    src/transitions/translatorerrortransition.cpp
+    src/translationedit.h
     src/translationedit.cpp
+    src/trayicon.h
     src/trayicon.cpp
     src/playlistplayer.h
     src/playlistplayer.cpp
+    src/tts/attsprovider.h
+    src/tts/attsprovider.cpp
+    src/tts/voice.h
+    src/tts/voice.cpp
+    src/translator/atranslationprovider.h
+    src/translator/atranslationprovider.cpp
+    src/tts/qtttsprovider.h
+    src/tts/qtttsprovider.cpp
+    src/tts/mozhittsprovider.h
+    src/tts/mozhittsprovider.cpp
+    src/tts/noopttsprovider.h
+    src/tts/noopttsprovider.cpp
+    src/translator/copytranslationprovider.h
+    src/translator/copytranslationprovider.cpp
+    src/translator/mozhitranslationprovider.h
+    src/translator/mozhitranslationprovider.cpp
+    src/provideroptions.h
+    src/provideroptions.cpp
+    src/provideroptionsmanager.h
+    src/provideroptionsmanager.cpp
+    src/language.h
+    src/language.cpp
 )
 
 if(UNIX AND NOT APPLE)
@@ -197,15 +235,21 @@ if(UNIX AND NOT APPLE)
         src/xdgdesktopportal.cpp
         src/ocr/screengrabbers/dbusscreengrabber.h
         src/ocr/screengrabbers/dbusscreengrabber.cpp
+        src/ocr/screengrabbers/waylandgnomescreengrabber.h
         src/ocr/screengrabbers/waylandgnomescreengrabber.cpp
+        src/ocr/screengrabbers/waylandplasmascreengrabber.h
         src/ocr/screengrabbers/waylandplasmascreengrabber.cpp
+        src/ocr/screengrabbers/waylandportalscreengrabber.h
         src/ocr/screengrabbers/waylandportalscreengrabber.cpp
+        src/settings/autostartmanager/unixautostartmanager.h
         src/settings/autostartmanager/unixautostartmanager.cpp
+        src/settings/autostartmanager/portalautostartmanager.h
         src/settings/autostartmanager/portalautostartmanager.cpp
     )
     if(WITH_KWAYLAND)
         target_sources(${PROJECT_NAME} PRIVATE
-            src/waylandhelper.cpp
+          src/waylandhelper.h
+          src/waylandhelper.cpp
         )
     endif(WITH_KWAYLAND)
 elseif(APPLE)
@@ -214,6 +258,7 @@ elseif(APPLE)
     target_sources(${PROJECT_NAME} PRIVATE
         ${MACOS_ICON}
         data/icons/app/app.qrc
+        src/settings/autostartmanager/macosautostartmanager.h
         src/settings/autostartmanager/macosautostartmanager.cpp
     )
 elseif(WIN32)
@@ -222,6 +267,7 @@ elseif(WIN32)
     target_sources(${PROJECT_NAME} PRIVATE
         ${WINDOWS_ICON}
         data/icons/app/app.qrc
+        src/settings/autostartmanager/windowsautostartmanager.h
         src/settings/autostartmanager/windowsautostartmanager.cpp
     )
 endif()
@@ -230,6 +276,129 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/s
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${EXECUTABLE_NAME})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+# Handle espeak-ng submodule for Piper TTS  
+if(WITH_PIPER_TTS)
+    # Build espeak-ng from submodule
+    set(ESPEAKNG_BUILD_DIR ${CMAKE_BINARY_DIR}/espeak_ng)
+    set(ESPEAKNG_INSTALL_DIR ${CMAKE_BINARY_DIR}/espeak_ng-install)
+    
+    if(WIN32)
+        set(ESPEAKNG_STATIC_LIB ${ESPEAKNG_INSTALL_DIR}/lib/espeak-ng.lib)
+        set(UCD_STATIC_LIB ${ESPEAKNG_BUILD_DIR}/src/espeak_ng_submodule-build/src/ucd-tools/ucd.lib)
+    else()
+        set(ESPEAKNG_STATIC_LIB ${ESPEAKNG_INSTALL_DIR}/lib/libespeak-ng.a)
+        set(UCD_STATIC_LIB ${ESPEAKNG_BUILD_DIR}/src/espeak_ng_submodule-build/src/ucd-tools/libucd.a)
+    endif()
+
+    include(ExternalProject)
+    ExternalProject_Add(espeak_ng_submodule
+        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/3rdparty/espeak-ng
+        PREFIX ${ESPEAKNG_BUILD_DIR}
+        PATCH_COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${CMAKE_CURRENT_SOURCE_DIR}/cmake/espeak-ng-deps.cmake
+            <SOURCE_DIR>/cmake/deps.cmake
+        CMAKE_ARGS
+            -DCMAKE_INSTALL_PREFIX=${ESPEAKNG_INSTALL_DIR}
+            -DBUILD_SHARED_LIBS:BOOL=OFF
+            -DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=ON
+            -DUSE_ASYNC:BOOL=OFF
+            -DUSE_MBROLA:BOOL=OFF
+            -DUSE_LIBSONIC:BOOL=OFF
+            -DUSE_LIBPCAUDIO:BOOL=OFF
+            -DUSE_KLATT:BOOL=OFF
+            -DUSE_SPEECHPLAYER:BOOL=OFF
+            -DEXTRA_cmn:BOOL=ON
+            -DEXTRA_ru:BOOL=ON
+            "-DCMAKE_C_FLAGS=-D_FILE_OFFSET_BITS=64 -I${CMAKE_CURRENT_SOURCE_DIR}/src/3rdparty/espeak-ng/src/ucd-tools/src/include"
+        BUILD_BYPRODUCTS
+            ${ESPEAKNG_STATIC_LIB}
+            ${UCD_STATIC_LIB}
+        UPDATE_DISCONNECTED TRUE
+    )
+
+    # Find ONNX Runtime (tries system packages first, then static linking fallback)
+    find_package(ONNXRuntime 1.22.1 REQUIRED)
+    
+    # If using static linking, build from source with telemetry disabled
+    if(ONNXRuntime_USE_STATIC)
+        build_onnxruntime_static()
+        # Add dependency to ensure ONNX Runtime is built before main target
+        add_dependencies(${PROJECT_NAME} onnxruntime_ready)
+    endif()
+
+    # Add compile definition and sources when dependencies are found
+    target_compile_definitions(${PROJECT_NAME} PRIVATE WITH_PIPER_TTS)
+    
+    # On Windows, tell espeak-ng we're linking statically
+    if(WIN32)
+        target_compile_definitions(${PROJECT_NAME} PRIVATE LIBESPEAK_NG_EXPORT=)
+    endif()
+    
+    # Configure ONNX Runtime includes - different for dynamic vs static
+    if(NOT ONNXRuntime_USE_STATIC)
+        target_include_directories(${PROJECT_NAME} PRIVATE 
+            ${ONNXRuntime_INCLUDE_DIRS}
+            ${ESPEAKNG_INSTALL_DIR}/include
+        )
+    else()
+        # Static linking configuration will set includes via configure_onnxruntime_static()
+        target_include_directories(${PROJECT_NAME} PRIVATE 
+            ${ESPEAKNG_INSTALL_DIR}/include
+        )
+    endif()
+    target_sources(${PROJECT_NAME} PRIVATE
+        src/tts/piperttsprovider.h
+        src/tts/piperttsprovider.cpp
+    )
+    
+    # Add dependency on espeak-ng build
+    add_dependencies(${PROJECT_NAME} espeak_ng_submodule)
+    
+    # Copy/install espeak-ng data files
+    if(WIN32)
+        # On Windows, copy to build directory (next to binary)
+        add_custom_target(copy_espeak_data
+            COMMAND ${CMAKE_COMMAND} -E copy_directory 
+                ${ESPEAKNG_INSTALL_DIR}/share/espeak-ng-data 
+                ${CMAKE_BINARY_DIR}/espeak-ng-data
+            DEPENDS espeak_ng_submodule
+            COMMENT "Copying espeak-ng data files to build directory"
+        )
+        add_dependencies(${PROJECT_NAME} copy_espeak_data)
+        
+        # Also install espeak-ng data next to the binary on Windows
+        install(DIRECTORY ${CMAKE_BINARY_DIR}/espeak-ng-data
+                DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+        
+        # Copy ONNX Runtime DLL to bin directory on Windows
+        if(ONNXRUNTIME_LIBRARY)
+            get_filename_component(ONNX_LIB_DIR ${ONNXRUNTIME_LIBRARY} DIRECTORY)
+            # Look for DLL in the lib directory and potential bin directory
+            file(GLOB ONNX_DLLS 
+                "${ONNX_LIB_DIR}/onnxruntime.dll"
+                "${ONNX_LIB_DIR}/../bin/onnxruntime.dll"
+                "${ONNX_LIB_DIR}/onnxruntime_providers_*.dll"
+                "${ONNX_LIB_DIR}/../bin/onnxruntime_providers_*.dll"
+            )
+            if(ONNX_DLLS)
+                install(FILES ${ONNX_DLLS} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+                message(STATUS "Will copy ONNX Runtime DLLs to bin: ${ONNX_DLLS}")
+            else()
+                message(WARNING "ONNX Runtime DLLs not found near ${ONNX_LIB_DIR}")
+            endif()
+        endif()
+    else()
+        # On other systems, install to share directory
+        install(DIRECTORY ${ESPEAKNG_INSTALL_DIR}/share/espeak-ng-data
+                DESTINATION ${CMAKE_INSTALL_PREFIX}/share/crow-translate)
+    endif()
+    
+    message(STATUS "Piper TTS support enabled with built-in espeak-ng")
+else()
+    message(STATUS "Piper TTS support disabled (enable with -DWITH_PIPER_TTS=ON)")
+endif()
+
 target_link_libraries(${PROJECT_NAME} PRIVATE
     Qt6::Network
     Qt6::Multimedia
@@ -238,7 +407,36 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     Qt6::Concurrent
     Qt6::StateMachine
     Tesseract::Tesseract
+    Qt6::TextToSpeech
 )
+
+# Link Piper dependencies if enabled
+if(WITH_PIPER_TTS)
+    if(NOT ONNXRuntime_USE_STATIC)
+        # Dynamic linking: use system ONNX Runtime
+        target_compile_definitions(${PROJECT_NAME} PRIVATE WITH_ONNX_RUNTIME_DYNAMIC=1)
+        target_link_libraries(${PROJECT_NAME} PRIVATE
+            ${ONNXRuntime_LIBRARIES}
+            ${ESPEAKNG_STATIC_LIB}
+            ${UCD_STATIC_LIB}
+        )
+        
+        # Set RPATH for dynamic ONNX Runtime
+        if(NOT WIN32)
+            set_target_properties(${PROJECT_NAME} PROPERTIES
+                INSTALL_RPATH "$ORIGIN;$ORIGIN/../lib"
+                BUILD_WITH_INSTALL_RPATH TRUE
+            )
+        endif()
+    else()
+        # Static linking: configure via our custom function
+        configure_onnxruntime_static(${PROJECT_NAME})
+        target_link_libraries(${PROJECT_NAME} PRIVATE
+            ${ESPEAKNG_STATIC_LIB}
+            ${UCD_STATIC_LIB}
+        )
+    endif()
+endif()
 
 if(UNIX)
     target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::DBus)
