--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -11,7 +11,7 @@ Dependencies:
     'plasma/kwayland': '@stable-kf6'
 
 Options:
-  cmake-options: '-D WITH_PORTABLE_MODE=ON -D CMAKE_COMPILE_WARNING_AS_ERROR=ON'
+  cmake-options: '-D WITH_PORTABLE_MODE=ON -D CMAKE_COMPILE_WARNING_AS_ERROR=ON -D WITH_PIPER_TTS=ON'
   cppcheck-arguments: '--enable=warning,style,performance --suppress=shadowFunction'
   cppcheck-ignore-files: ['src/3rdparty', 'data/icons/3rdparty']
   run-tests: False
